Finished UI and fixed usage bugs Add employee contact details, draft schedule deletion, and availability Gantt view